@startuml lsm6dso_class

skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    HeaderBackgroundColor SteelBlue
    HeaderFontColor White
    FontSize 12
    AttributeFontSize 11
}
skinparam enum {
    BackgroundColor LightYellow
    BorderColor DarkGoldenRod
}
skinparam ArrowColor DarkSlateGray
left to right direction
skinparam nodesep 30
skinparam ranksep 50

' ──────────────────────────────────────────────
' Enums de configuración — fila 1
' ──────────────────────────────────────────────
together {
    enum Lsm6dsoOdrAcc << (E,LightYellow) >> {
    }

    enum Lsm6dsoFsAcc << (E,LightYellow) >> {
    }

    enum Lsm6dsoOdrGyr << (E,LightYellow) >> {
    }
}

' ──────────────────────────────────────────────
' Enums de configuración — fila 2
' ──────────────────────────────────────────────
together {
    enum Lsm6dsoFsGyr << (E,LightYellow) >> {
    }

    enum Lsm6dsoWakeThs << (E,LightYellow) >> {
    }

    enum Lsm6dsoWakeDur << (E,LightYellow) >> {
    }
}

' ──────────────────────────────────────────────
' Enums de configuración — fila 3
' ──────────────────────────────────────────────
together {
    enum Lsm6dsoWakeWeight << (E,LightYellow) >> {
    }

    enum Lsm6dsoSleepDur << (E,LightYellow) >> {
    }

    enum Lsm6dsoI3C << (E,LightYellow) >> {
    }
}

' ──────────────────────────────────────────────
' Dependencia bus
' ──────────────────────────────────────────────
class I2CBus << (C,LightGray) >>

' ──────────────────────────────────────────────
' Clase principal
' ──────────────────────────────────────────────
class Lsm6dso {
    public:
    ax          : float
    ay          : float
    az          : float
    gx          : float
    gy          : float
    gz          : float
    temperature : float
    axRaw   : int16_t
    ayRaw   : int16_t
    azRaw   : int16_t
    gxRaw   : int16_t
    gyRaw   : int16_t
    gzRaw   : int16_t
    tempRaw : int16_t
    Lsm6dso()
    init() : bool
    readAcceleration() : I2CResult
    readGyroscope()    : I2CResult
    readTemperature()  : I2CResult
    getWhoAmI()        : I2CResult
    --
    private:
    i2cAddr     : uint8_t
    i2cBus      : I2CBus*
    initialized : bool
    configure()     : bool
    writeRegister() : I2CResult
    readRegister()  : I2CResult
    readRegisters() : I2CResult
}

' ──────────────────────────────────────────────
' Relaciones
' ──────────────────────────────────────────────
Lsm6dso "1" *-- "1"  I2CBus         : usa (I2C2) >
Lsm6dso ..>  Lsm6dsoOdrAcc     : <<parámetro>>
Lsm6dso ..>  Lsm6dsoFsAcc      : <<parámetro>>
Lsm6dso ..>  Lsm6dsoOdrGyr     : <<parámetro>>
Lsm6dso ..>  Lsm6dsoFsGyr      : <<parámetro>>
Lsm6dso ..>  Lsm6dsoWakeThs    : <<parámetro>>
Lsm6dso ..>  Lsm6dsoWakeDur    : <<parámetro>>
Lsm6dso ..>  Lsm6dsoWakeWeight : <<parámetro>>
Lsm6dso ..>  Lsm6dsoSleepDur   : <<parámetro>>
Lsm6dso ..>  Lsm6dsoI3C        : <<parámetro>>

@enduml
